--- a/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
+++ b/src/Hosts/Quintessence.QCandidate.Web/Quintessence.QCandidate.Web.csproj
@@ -45,9 +45,6 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.35" />
-    <PackageReference Include="Kenze.Infrastructure" Version="1.3.201911131" />
-    <PackageReference Include="Kenze.Infrastructure.Dapper" Version="1.3.201912191" />
-    <PackageReference Include="Kenze.Infrastructure.Interfaces" Version="1.3.201911081" />
     <PackageReference Include="MediatR" Version="8.0.1" Condition="'$(MediatR)' == 'true'" />
     <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" Condition="'$(MediatR)' == 'true'" />
@@ -76,6 +73,7 @@
     <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.Debug" Version="1.0.1" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
 
   <ItemGroup>
